# home

./: .gitignore  .travis.yml  LICENSE  README.md  app  com.github.manexim.home.yml  meson.build  meson_options.txt
.github/workflows/: ci.yml  main.yml
data/: com.github.manexim.home.appdata.xml  com.github.manexim.home.appdata.xml.in  com.github.manexim.home.desktop  com.github.manexim.home.gresource.xml  com.github.manexim.home.gschema.xml  com.manexim.home.appdata.xml.in  com.manexim.home.desktop.in  com.manexim.home.gschema.xml  meson.build
data/styles/: application.css
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.manexim.home.pot  com.manexim.home.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+160 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+159 more)
src/: Application.vala  Constants.vala.in  MainWindow.vala  meson.build
src/Actions/: ActionType.vala  DeviceActions.vala
src/Flux/: ActionType.vala  Actions.vala  HueMiddleware.vala  LifxMiddleware.vala  LoggingMiddleware.vala  Payloads.vala  Store.vala
src/Payloads/: DevicePayload.vala
src/colors/: HSB.vala  RGB.vala
src/config/: Constants.vala
src/controllers/: DeviceController.vala  DevicesController.vala  ThingsController.vala
src/lifx/: Controller.vala  Lamp.vala  LampController.vala  LifxLamp.vala  LifxLampController.vala  Packet.vala  Service.vala
src/models/: Device.vala  Hub.vala  Lamp.vala  Thing.vala
src/onboarding/: AbstractOnboardingView.vala  FinishView.vala  LIFXView.vala  PhilipsHueView.vala  StartView.vala
src/pages/: AbstractDevicePage.vala  DevicePage.vala  HueBridgeOnboardingPage.vala  LampPage.vala  LoadingPage.vala  ThingPage.vala
src/philips/hue/: Bridge.vala  BridgeController.vala  Controller.vala  Lamp.vala  Service.vala
src/services/: Settings.vala
src/types/: Power.vala
src/utils/: Buffer.test.vala  Buffer.vala  History.vala  Platform.vala
src/views/: DevicesView.vala  OnboardingView.vala  Overview.vala  ThingsView.vala  WelcomeView.vala
src/widgets/: Carousel.vala  CarouselItem.vala  ColorPicker.vala  IconPopover.vala  Overlay.vala
